trying to fix overlap

--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -12,9 +12,6 @@ p {
 ul {
 	text-align: left;
 }
-img {
-	position: center;
-}
 #slogan {
 	font-style: italic;
 }
